--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   dots_indicator: ^4.0.1
+  firebase_core: ^3.12.1
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.8.0
